--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Chris Lockwood, Devon Koch, Shelley Wang",
   "dependencies": {
     "express": "^4.13.3",
+    "http": "0.0.0",
+    "path": "^0.11.14",
     "phaser": "^2.4.2",
     "redis": "^0.12.1",
     "socket.io": "^1.3.6"
