--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "phaser": "^2.4.2",
     "redis": "^0.12.1",
     "socket.io": "^1.3.6"
+  },
+  "scripts": {
+    "start": "node server/server.js"
   }
 }
