--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "socket.io": "^1.3.6"
   },
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "postinstall": "bower install"
   }
 }
