--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "path": "^0.11.14",
     "phaser": "^2.4.2",
     "redis": "^0.12.1",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "bower": "1.4.x"
   },
   "scripts": {
     "start": "node server/server.js",
