--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "url": "https://github.com/invincible-elevator/sumo-chicken",
   "author": "Chris Lockwood, Devon Koch, Shelley Wang",
   "dependencies": {
+    "bower": "1.4.x",
     "express": "^4.13.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.0",
+    "grunt-shell": "^1.1.2",
     "http": "0.0.0",
     "path": "^0.11.14",
     "phaser": "^2.4.2",
     "redis": "^0.12.1",
-    "socket.io": "^1.3.6",
-    "bower": "1.4.x"
+    "socket.io": "^1.3.6"
   },
   "scripts": {
     "start": "node server/server.js",
