--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt": "^0.4.5",
     "grunt-concurrent": "^2.0.1",
     "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-nodemon": "^0.4.0",
     "grunt-shell": "^1.1.2",
