--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "socket.io": "^1.3.6"
   },
   "scripts": {
-    "start": "node server/server.js",
+    // "start": "node server/server.js",
+    "start": "grunt start",
     "postinstall": "bower install"
   },
   "repository": {
