--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "redis": "^0.12.1",
     "socket.io": "^1.3.6"
   },
-  "scripts": {
-    "start": "bower install", 
-    "postinstall": "grunt start"
+  "scripts": { 
+    "postinstall": "bower install; grunt start"
   },
   "repository": {
     "type": "git",
