--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": { 
     "start": "node server/server.js",
-    "postinstall": "bower install; ./node_modules/.bin/grunt build"
+    "postinstall": "bower install; ./node_modules/grunt-cli/bin/grunt build"
   },
   "repository": {
     "type": "git",
