--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bower": "1.4.x",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^2.0.1",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
@@ -19,7 +20,7 @@
     "redis": "^0.12.1",
     "socket.io": "^1.3.6"
   },
-  "scripts": { 
+  "scripts": {
     "start": "node server/server.js",
     "postinstall": "bower install; ./node_modules/grunt-cli/bin/grunt build"
   },
